--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 			html,body{height: 100%;background-color: black;transition: 2s;}
 			body{text-align: center;}
 			*::selection{appearance: none;}
+			@font-face {
+				font-family: Genshin;
+				src: url(Genshin.ttf);
+			}
 			div{
 				position: relative;
 				top: 15%;
 				color: white;
 				margin: 0 auto;
 				font-size: 7rem;
+				font-family: Genshin;
 				font-weight: 900;
 				transition: 2s;
 			}
@@ -80,7 +85,7 @@
 			}
 			 
 			// 中考开始时间
-			const endTime = 'June 21, 2024 9:00:00';
+			const endTime = 'June 15, 2024 9:00:00';
 			 
 			// 每秒更新一次倒计时
 			const intervalId = setInterval(countdown, 100, endTime);
@@ -94,6 +99,9 @@
 	</head>
 	<body id="bg">
 		<button id="btn" onclick="changeTheme()"></button>
+		<img src="eye.png"/>
+		<img src="timeCount.png"/>
+		<img src="hurry.png"/>
 		<div id="fixed">
 			笑↗笑↘温馨提示你<br>距离中考还剩<br>
 			<span id="timeCount"></span>
