--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>中考倒计时</title>
+		<title>高考倒计时</title>
 		<style>
 			*{padding: 0;margin: 0;}
 			html,body{height: 100%;background-color: black;transition: 2s;}
@@ -61,7 +61,7 @@
 			  const now = new Date().getTime();
 			  const distance = countDownDate - now;
 			  if (distance < 0 && distance > -172800000) {
-			    document.getElementById('timeCount').innerHTML = "中考已开始<br>期待你的好发挥吧！";
+			    document.getElementById('timeCount').innerHTML = "高考已开始<br>期待你的好发挥吧！";
 			    return;
 			  }
 			  else if (distance >= 0){
@@ -78,14 +78,14 @@
 				}
 			  }
 			  else{
-				document.getElementById('timeCount').innerHTML = "中考结束了<br>祈祷你的好成绩！";
+				document.getElementById('timeCount').innerHTML = "高考结束了<br>祈祷你的好成绩！";
 				clearInterval(intervalId);
 				return;
 			  }
 			}
 			 
-			// 中考开始时间
-			const endTime = 'June 15, 2024 9:00:00';
+			// 开始时间
+			const endTime = 'June 15, 2025 9:00:00';
 			 
 			// 每秒更新一次倒计时
 			const intervalId = setInterval(countdown, 100, endTime);
@@ -103,7 +103,7 @@
 		<img src="timeCount.png"/>
 		<img src="hurry.png"/>
 		<div id="fixed">
-			笑↗笑↘温馨提示你<br>距离中考还剩<br>
+			笑↗笑↘温馨提示你<br>距离高考还剩<br>
 			<span id="timeCount"></span>
 		</div>
 	</body>
